--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Some boilerplate code to get you started - get shakin'!",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "build:dev": "npm run build -- --watch --mode=development",
+    "build": "npm run install & webpack",
+    "build:dev": "webpack --watch --mode=development",
+    "install": "npm i",
     "seed": "node script/seed.js",
     "start": "node server",
     "start:dev": "npm run build:dev & npm run start-server",
