--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
+    "cron": "^1.8.2",
     "express": "^4.16.4",
     "firebase": "^9.0.0-beta.1",
     "history": "^4.9.0",
