--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
     "axios": "^0.21.1",
@@ -45,8 +48,6 @@
     "esm": "^3.2.25",
     "mocha": "^6.2.3",
     "nodemon": "^1.19.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-test-renderer": "^16.4.2",
