--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "firebase": "^9.0.0-beta.1",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.7.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
@@ -45,8 +49,6 @@
     "esm": "^3.2.25",
     "mocha": "^6.2.3",
     "nodemon": "^1.19.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-test-renderer": "^16.4.2",
