--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cron": "^1.8.2",
     "express": "^4.16.4",
     "firebase": "^9.0.0-beta.1",
+    "firebase-admin": "^9.8.0",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
