--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "socket.io": "^4.1.1",
+    "socket.io-client": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
