--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
+    "react-slick": "^0.28.1",
     "sequelize": "^6.3.5",
     "socket.io": "^4.1.1",
     "socket.io-client": "^4.1.1"
