--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-slick": "^0.28.1",
